[package]
name = "ocean"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = { version = "1.0", features = ["parallel"] }
clap = "3.0.0-beta.5"
colored = "2.0.0"
serde = "1.0"
serde_derive = "1.0.130"
thiserror = "1.0.30"
toml = "0.5.8"
